# stm32

./: .gitignore
Libs/Crc/: CMakeLists.txt  crc.c  crc.h
Libs/Flash/: Bootloader.cpp  Bootloader.h  FlashBase.h  FlashStorage.cpp  FlashStorage.h
Libs/Flash/FlashStorage/: CMakeLists.txt  FlashStorage.cpp  FlashStorage.h
Libs/Protocol/Application/: ApplicationBase.h
Libs/Protocol/CircularByteBuffer/: CircularByteBuffer.cpp  CircularByteBuffer.h
Libs/Protocol/Interface/: ILog.h  IOnPacketReady.h
Libs/Protocol/PacketBase/: PacketBase.cpp  PacketBase.h
Libs/Protocol/Parser/: PacketParser.cpp  PacketParser.h  ParserBase.cpp  ParserBase.h
Libs/Protocol/Physics/: PhysicsBase.h
Libs/Protocol/Physics/UARTDMAPhysics/: UARTDMAPhysics.cpp  UARTDMAPhysics.h
Libs/Protocol/Transport/: TransportBase.cpp  TransportBase.h
vs_code/cmake_template/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  STM32L4Q5CGUX_FLASH.ld  STM32L4Q5CGUX_RAM.ld  cmaketest.ioc
vs_code/cmake_template/Calculator/: CMakeLists.txt
vs_code/cmake_template/Core/Src/: main.cpp  stm32l4xx_hal_msp.c
vs_code/cmake_template/cmake/: gcc-arm-none-eabi.cmake
vs_code/cmake_template/tests/: gpio_test.cpp  main_test.cpp
vs_code/l4q5_boot/: CMakeLists.txt  CMakePresets.json  STM32L4Q5CGUX_BOOT_FLASH.ld  STM32L4Q5CGUX_FLASH.ld
vs_code/l4q5_boot/.devcontainer/: Dockerfile  devcontainer.json
vs_code/l4q5_boot/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
vs_code/l4q5_boot/Core/Inc/: ApplicationL.h  FlashL.h  PhysicsL.h  TransportL.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
vs_code/l4q5_boot/Core/Src/: ApplicationL.cpp  FlashL.cpp  PhysicsL.cpp  TransportL.cpp  main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c
vs_code/l4q5_boot/cmake/: gcc-arm-none-eabi.cmake
wb55/: .cproject  .mxproject  .project  STM32WB55RGVX_FLASH.ld  wb55.ioc
wb55/Core/Inc/: main.h  stm32wbxx_it.h
wb55/Core/Prtcl/: ApplicationWB.cpp  ApplicationWB.h  BootWB55.cpp  BootWB55.h  TransportWB.cpp  TransportWB.h  UARTWB55.cpp  UARTWB55.h
wb55/Core/Src/: main.cpp  stm32wbxx_hal_msp.c  stm32wbxx_it.c
